Fix Sonar issues: Use record patterns, add private constructor, fix remove() usage, remove duplicate code blocks, replace collect with toList() (#204)
Co-authored-by: Cursor Agent <cursoragent@cursor.com>